--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div class="question-area">
       <span id="operand1">0</span>
       <span id="operator">x</span>
-      <span id="operend2">0</span>
+      <span id="operand2">0</span>
       <span>=</span>
       <p class="answer-message">Enter Answer:</p>
-      <input id="anwser-box" type="number" />
+      <input id="answer-box" type="number" />
     </div>
     <button data-type="submit" class="btn btn--gray">Submit Answer</button>
 
